# Repo-Copilot

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  fly.toml  pyproject.toml  render.yaml
agent/: orchestrator.py
api/: dependencies.py  main.py  schemas.py  webhook.py
core/: embeddings.py  git.py  github.py  llm.py  tools.py  tracer.py
dashboard/: index.html
docs/: MULTI_LLM.md
eval-reports/: eval-20260706T085912.md  eval-20260706T090333.json  eval-20260706T090333.md  eval-20260706T090340.json  eval-20260706T090340.md  eval-20260706T090608.json  eval-20260706T090608.md  eval-20260706T090843.json  eval-20260706T090843.md  eval-20260706T090904.json  eval-20260706T090904.md  eval-20260706T090913.json  eval-20260706T090913.md  eval-40cd853a-897b-48ad-8433-47f64fa327df.json  eval-40cd853a-897b-48ad-8433-47f64fa327df.md  eval-6b406a21-757d-4a22-bbae-5bf39e2fc8b3.json  eval-6b406a21-757d-4a22-bbae-5bf39e2fc8b3.md  eval-6ec1c511-75ef-47a7-9de6-d6d76780538b.json  eval-6ec1c511-75ef-47a7-9de6-d6d76780538b.md  eval-c78e9b72-55ab-4f79-a396-339e1a13344b.json  eval-c78e9b72-55ab-4f79-a396-339e1a13344b.md  eval-cce019a1-eada-4823-b5c3-9cf55b9007fc.json  eval-cce019a1-eada-4823-b5c3-9cf55b9007fc.md  eval-f17d8f6b-9114-410d-97d4-922aa92895c1.json  eval-f17d8f6b-9114-410d-97d4-922aa92895c1.md
evals/: judge_llm.py  report.py  runner.py  scorer.py
models/: decision.py  issue.py
scripts/: index_codebase.py  run_evals.py  seed_test_cases.py
storage/: postgres.py  vector_store.py
tests/: conftest.py  test_api.py  test_embeddings.py  (+7 more)
(+33 files in other folders)
