[project]
name = "repo-copilot"
version = "0.1.0"
description = "Agentic GitHub issue triager and PR drafter"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.30.0",
    "openai>=1.0.0",
    "google-generativeai>=0.8.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pygithub>=2.1.0",
    "GitPython>=3.1.0",
    "chromadb>=0.5.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.5.0",
    "httpx>=0.26.0",
    "python-dotenv>=1.0.0",
    "sentence-transformers>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]
